[B]1.4.0[/B]
- Added some functions in control module
- Added m3u8 parser sublib
- Added iso8601 module
- Adapted library to dual python 2/3 compatibility (untested, though)
- Removed optional requests import
- Replaced downloader module with a function adapted from tknorris's shared modules
- Removed unicode logging ability from log module
- Removed parsedom(2) module, legacy client.parsedom is now used only

[B]1.3.5[/B]
- New convert function in youtube module
- New strip accents function in cleantitle module
- Cosmetics

[B]1.3.4[/B]
- Cosmetics

[B]1.3.3[/B]
- Addonmedia function gets optional media subfolder parameter
- Removed input dialog function, way more flexible calling dialog class directly

[B]1.3.2[/B]
- Added try/except block for inputstream adaptive

[B]1.3.1[/B]
- Replaced json method for getting xbmc.python version to infolabel

[B]1.3.0[/B]
- New json-rpc methods introduced
- LFed a few modules
- Reorganised imports in control module
- Add dash urlquote_plus
- Removed live dash parameter from directory.resolve
- Improved dash conditional
- Various cosmetics

[B]1.2.10[/B]
- Resolve method in directory has got the live parameter for DASH
- Sortmethods have unsorted as default parameter/method

[B]1.2.9[/B]
- Added DASH parameters in directory.resolve function (optional)

[B]1.2.8[/B]
- Log function tweaks

[B]1.2.7[/B]
- Added utf-8 encoding for title parameter in directory module
- Cosmetics

[B]1.2.6[/B]
- Changes to sort methods from plain integers to module variables

[B]1.2.5[/B]
- Added plot, name, genre quote_plus in directory module
- Added sortmethods in control module
- Added conditional in youtube play module so it can be called with setresolved url method

[B]1.2.4[/B]
- Added title parameter for url calls in directory module

[B]1.2.3[/B]
- Added setting for youtube streams

[B]1.2.2[/B]
- Slight tweak in addonmedia method
- Deprecated sysicon variable in directory module

[B]1.2.1[/B]