@@ -1,3 +1,6 @@
+[B]1.4.1[/B]
+- Added parameters with default arguments (table) into bookmarks module
+
 [B]1.4.0[/B]
 - Added some functions in control module
 - Added m3u8 parser sublib
